[package]
name = "socket_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.20"
tokio = { version = "1.29", features = ["full"] }
futures-util = "0.3"
futures-channel = "0.3"
async-recursion = "1.0"
anyhow = "1.0"

# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
